--- a/package.json
+++ b/package.json
@@ -19,26 +19,32 @@
     "spcy:build": "yarn spcy:clean && tsc",
     "spcy:format": "prettier --write \"{src,__tests__}/**/*.{js,ts}\"",
     "spcy:lint": "eslint --fix \"src/**/*.{js,ts}\"",
-    "spcy:test": "jest"
+    "spcy:test": "jest",
+    "plop": "plop --plopfile ./dist/plopfile.js"
+  },
+  "bin": {
+    "plops": "./bin/index.js"
   },
   "devDependencies": {
     "@spcy/lib.dev.tasty": "^1.0.0",
     "@spcy/lib.dev.typescript-reflection": "^1.0.0",
-    "@types/jest-specific-snapshot": "^0.5.4",
     "@types/jest": "^26.0.0",
+    "@types/jest-specific-snapshot": "^0.5.4",
     "@types/lodash": "^4.14.155",
     "@types/node": "^14.0.13",
-    "typescript": "3.9.5",
     "eslint": "^6.8.0",
-    "prettier": "^2.0.5",
     "eslint-config-airbnb-typescript-prettier": "^2.2.0",
     "jest": "^26.0.1",
     "jest-specific-snapshot": "^3.0.0",
+    "prettier": "^2.0.5",
+    "shx": "^0.3.2",
     "ts-jest": "^26.1.0",
-    "shx": "^0.3.2"
+    "typescript": "3.9.5"
   },
   "dependencies": {
     "@spcy/lib.core.reflection": "^1.0.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "minimist": "^1.2.5",
+    "plop": "^2.7.4"
   }
 }
